welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not enough arguments for method apply: (i: Int)Int in class Array.
Unspecified value parameter i.
    if(nums()==lookingFor){
           ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to (nums.length-2)){
               ^